# obsidian-note-taking-assistant

./: .env.example  .gitignore  LICENSE  Makefile  README.md  create-embeddings-from-md.py  pyproject.toml
api/: Dockerfile  README.md  embed_server.py  requirements.txt
queries/: find_backlinks.sql  find_connections.sql  hidden_connections.sql  semantic_search.sql  useful_queries.sql
scripts/: ingest.py  query.py
sql/: exploring.sql
src/: __init__.py
src/database/: __init__.py  ingestion.py  schema.py
src/embeddings/: __init__.py  embedder.py
src/parsers/: __init__.py  chunker.py  link_extractor.py  markdown_parser.py
web-app/: README.md  package-lock.json  package.json
web-app/app/: globals.css  layout.tsx  page.tsx
web-app/app/api/embed/: route.ts
web-app/lib/: motherduck.ts
web-app/prompts/: agents-webapp.md  build-summary.md
