[project]
name = "obsidian-note-taking-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "flagembedding>=1.2.11",
    "frontmatter>=3.0.8",
    "numpy>=2.1.3",
    "peft>=0.14.0",
    "polars>=1.16.0",
    "transformers>=4.47.0",
]
